--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
 
-mybatis.type-aliases-package:com.study.springboot
+mybatis.type-aliases-package:com.study.practice
 mybatis.mapper-locations: classpath:mapper/*Mapper.xml
