--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,11 @@ spring.datasource.min-idle=5
 
 mybatis.type-aliases-package:com.study.springboot
 mybatis.mapper-locations: classpath:mapper/*Mapper.xml
+
+#热部署相关配置
+#热部署生效
+spring.devtools.restart.enabled=true
+#设置重启的目录，检索目录(resources/static、resources/templates)
+spring.devtools.restart.additional-paths= src/main/java
+#classpath目录下的WEB-INF文件夹内容修改不重启
+#spring.devtools.restart.exclude= WEB-INF/**
