--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-
+server.port=99888
 #数据库相关配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/study
@@ -19,3 +19,4 @@ spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths= src/main/java
 #classpath目录下的WEB-INF文件夹内容修改不重启
 #spring.devtools.restart.exclude= WEB-INF/**
+
