--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,16 @@ spring.devtools.restart.additional-paths= src/main/java
 #classpath目录下的WEB-INF文件夹内容修改不重启
 #spring.devtools.restart.exclude= WEB-INF/**
 
+spring.redis.host=127.0.0.1
+#Redis服务器连接端口
+spring.redis.port=6379
+#Redis服务器连接密码（默认为空）
+spring.redis.password=
+#连接池最大连接数（使用负值表示没有限制）
+spring.redis.jedis.pool.max-wait=
+#连接池中的最大空闲连接
+spring.redis.jedis.pool.max-idle=8
+#连接池中的最小空闲连接
+spring.redis.jedis.pool.min-idle=0
+#连接超时时间（毫秒）
+spring.redis.timeout=30000
