--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
+
+#系统是否开启加密
+secret.open=true
+#系统秘钥
+secret.key=1234567891234567
+
+#server:
+#    max-http-header-size: 15360
+#    port: 8080
+#    tomcat:
+#        uri-encoding: UTF-8
+
 #数据库相关配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/study
